src/pages/Home/Home.module.scss
@import "../../utils/commons.scss";

.wrapper {
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  background: rgba(85, 188, 126, 0.2);
  padding: 0.5rem;
  position: relative;

  .content {
    padding: 0.5rem;
    p {
      color: #5c5c5c;
    }
    h4 {
      color: rgb(85, 188, 126);
      font-size: 3rem;
      font-weight: 600;
    }
  }

  .icon {
    position: absolute;
    width: 25px;
    right: 0;
    bottom: 0;
    margin: 0 1rem 1.5rem 0;
  }

  &.successCard {
    background: #dafde8;
    .content {
      h4 {
        color: var(--clr-success);
      }
    }
  }
  &.warningCard {
    background: #fff3d3;
    .content {
      h4 {
        color: var(--clr-warning);
      }
    }
  }
  &.errorCard {
    background: #ffe8e8;
    .content {
      h4 {
        color: var(--clr-error);
      }
    }
  }
  &.primaryCard {
    background: #dbf0ff;
    .content {
      h4 {
        color: var(--clr-primary);
      }
    }
  }
}

.container {
  .recentTestContainer {
    h2 {
      // font-size: 1.6rem;
      font-weight: 400;
    }
    .data {
      margin-top: 1rem;
      display: -ms-grid;
      display: grid;
      -ms-grid-columns: repeat(2, 1fr);
      grid-template-columns: repeat(2, 1fr);
      gap: 1rem;
    }
  }
}
.upcomingTestCard{
  position: relative;
}

.listItemContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 1rem;
  width: 100%;
  height: 30px;
  margin: 2px;
  
  &::before{
    content: "";
   transition: all 0.2s ease-in-out;
    position: absolute;
    left: 0;
    z-index: 0;
    width: 100%;
    height: 30px;
  }
  &:hover::before{
    background: rgba(97, 180, 241, 0.1);
    
  }
  cursor: pointer;
  .title {
    color: black;
    z-index: 1;
  }
 
  .details {
    color: black;
    display: flex;
    align-items: center;
    z-index: 1;
    .indicator {
      width: 14px;
      margin-left: 8px;
    }
  }
}

.instituteDetailsCard {
  margin-top: 2rem;
}

.instituteDetails {
  @extend .flexRow;
  // justify-content: space-evenly;
  // padding: 10px 10px 10px 0;

  .batch {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: 50px;
    .batchContainer {
      display: flex;
      align-items: center;
      margin-bottom: 0.2rem;
      img {
        width: 20px;
        color: #292d32;
      }
      .batchName {
        color: #292d32;
        font-size: 1rem;
        margin-left: 10px;
      }
    }

    .number {
      font-size: 2.2rem;
      font-weight: medium;
      color: #55bc7e;
    }
  }
}

